--- a/index.html
+++ b/index.html
@@ -228,6 +228,6 @@
       </div>
     </section>
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type=“module” src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
