--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <!-- <link rel="stylesheet" href="./assets/css/main.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -18,6 +18,18 @@
       href="https://fonts.googleapis.com/css2?family=Anton&family=PT+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="bg-green">
     <nav class="navbar navbar-expand-md bg-transparent">
@@ -165,11 +177,10 @@
           <div class="row">
             <div class="col">
               <input
-                type="text" 
+                type="text"
                 class="form-control"
                 placeholder="Nombre"
                 aria-label="Nombre"
-                
               />
             </div>
             <div class="col">
@@ -228,6 +239,9 @@
       </div>
     </section>
 
-    <script type=“module” src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- <script
+      type="“module”"
+      src="./node_modules/bootstrap/dist/js/bootstrap.min.js"
+    ></script> -->
   </body>
 </html>
